lessen textarea width to avoid text hiding behind key

--- a/static/application.css
+++ b/static/application.css
@@ -11,7 +11,7 @@ textarea {
 	border: 0px;
 	color: #fff;
 	padding: 0px;
-	width: 100%;
+	width: 90%;
 	height: 100%;
 	font-family: monospace;
 	outline: none;
